==> apache/nuttx/arch/arm/src/max326xx/max32660/max32660_dma.c <==
#include <nuttx/config.h>
#include <assert.h>
#include <debug.h>
#include <nuttx/arch.h>
#include <nuttx/irq.h>
#include <nuttx/spinlock.h>
#include "arm_internal.h"
#include "hardware/max326_dma.h"
#include "max326_periphclks.h"
#include "max326_dma.h"
#define MAX326_IRQ_DMA(n)     (MAX326_IRQ_DMA0 + (n))

void weak_function arm_dma_initialize(void)
{
  int i;

  /* Enable peripheral clocking to the DMA */

  max326_dma_enableclk();

  /* Initialize each DMA channel */

  for (i = 0; i < MAX326_DMA_NCHAN; i++)
    {
      struct max326_dmach_s *dmach = &g_max326_dmach[i];

      /* Initialize the state structure
       * (assuming that it is already zeroed)
       */

      dmach->chno = i;

      /* Attach the DMA channel interrupt handler */

      DEBUGVERIFY(irq_attach(MAX326_IRQ_DMA(i), max326_dmach_interrupt,
                             dmach));
    }
}

int max326_dma_setup(DMA_HANDLE handle, uint32_t cfg, uint32_t saddr,
                     uint32_t daddr, size_t nbytes)
{
  struct max326_dmach_s *dmach = (struct max326_dmach_s *)handle;
  uintptr_t base;

  DEBUGASSERT(dmach != NULL && dmach->inuse);
  DEBUGASSERT(nbytes > 0 && nbytes < (1 << 24));

  /* Set up the DMA channel registers */

  base = MAX326_DMACH_BASE(dmach->chno);
  cfg &= (DMACH_CFG_PRI_MASK | DMACH_CFG_REQSEL_MASK | DMACH_CFG_REQWAIT |
          DMACH_CFG_TOSEL_MASK | DMACH_CFG_PSSEL_MASK |
          DMACH_CFG_SRCWD_MASK | DMACH_CFG_SRCINC | DMACH_CFG_DSTWD_MASK |
          DMACH_CFG_DSTINC | DMACH_CFG_BRST_MASK);
  putreg32(cfg, base + MAX326_DMACH_CFG_OFFSET);

  putreg32(saddr,  base + MAX326_DMACH_SRC_OFFSET);
  putreg32(daddr,  base + MAX326_DMACH_DST_OFFSET);
  putreg32(nbytes, base + MAX326_DMACH_CNT_OFFSET);

  /* No reload (yet) */

  putreg32(0, base + MAX326_DMACH_SRCRLD_OFFSET);
  putreg32(0, base + MAX326_DMACH_DSTRLD_OFFSET);
  putreg32(0, base + MAX326_DMACH_CNTRLD_OFFSET);

  /* Setup the DMA channel state */

  dmach->reload = false;
  dmach->cb     = NULL;
  dmach->arg    = NULL;
  return OK;
}

int max326_dmastart(DMA_HANDLE handle, dma_callback_t callback, void *arg)
{
  struct max326_dmach_s *dmach = (struct max326_dmach_s *)handle;
  uintptr_t base;
  uint32_t cfg;

  DEBUGASSERT(dmach != NULL && dmach->inuse);

  /* Enable interrupts and reload (if appropriate) */

  base = MAX326_DMACH_BASE(dmach->chno);
  cfg  = getreg32(base + MAX326_DMACH_CFG_OFFSET);
  cfg |= (DMACH_CFG_CHDIEN | DMACH_CFG_CTZIEN);

  if (dmach->reload)
    {
      cfg |= DMACH_CFG_RLDEN;
    }

  putreg32(cfg, base + MAX326_DMACH_CFG_OFFSET);

  /* Enable channel interrupts at the DMA controller */

  modifyreg32(MAX326_DMA_INTEN_OFFSET, 0, 1 << dmach->chno);

  /* Enable the channel and start the DMA */

  cfg |= DMACH_CFG_CHEN;
  putreg32(cfg, base + MAX326_DMACH_CFG_OFFSET);

  /* Enable channel interrupts at the NVIC */

  up_enable_irq(MAX326_IRQ_DMA(dmach->chno));
  return OK;
}

void max326_dmastop(DMA_HANDLE handle)
{
  struct max326_dmach_s *dmach = (struct max326_dmach_s *)handle;
  max326_dma_terminate(dmach, -ECANCELED);
}

void max326_dmasample(DMA_HANDLE handle, struct max326_dmaregs_s *regs)
{
  struct max326_dmach_s *dmach = (struct max326_dmach_s *)handle;
  uintptr_t base;
  uint32_t cfg;

  DEBUGASSERT(dmach != NULL);

  /* Global Registers */

  regs->inten  = getreg32(MAX326_DMA_INTEN);
  regs->intfl  = getreg32(MAX326_DMA_INTRL);

  /* Channel Registers */

  base         = MAX326_DMACH_BASE(dmach->chno);
  regs->cfg    = getreg32(base + MAX326_DMACH_CFG_OFFSET);
  regs->stat   = getreg32(base + MAX326_DMACH_STAT_OFFSET);
  regs->src    = getreg32(base + MAX326_DMACH_SRC_OFFSET);
  regs->dst    = getreg32(base + MAX326_DMACH_DST_OFFSET);
  regs->cnt    = getreg32(base + MAX326_DMACH_CNT_OFFSET);
  regs->srcrld = getreg32(base + MAX326_DMACH_SRCRLD_OFFSET);
  regs->dstrld = getreg32(base + MAX326_DMACH_DSTRLD_OFFSET);
  regs->cntrld = getreg32(base + MAX326_DMACH_CNTRLD_OFFSET);
}

void max326_dmadump(DMA_HANDLE handle, const struct max326_dmaregs_s *regs,
                    const char *msg)
{
  struct max326_dmach_s *dmach = (struct max326_dmach_s *)handle;

  DEBUGASSERT(dmach != NULL);

  /* Global Registers */

  dmainfo("DMA Global Registers: %s\n", msg);
  dmainfo("   INTEN:  %04x\n", regs->inten);
  dmainfo("   INTFL:  %04x\n", regs->intfl);

  /* Channel Registers */

  dmainfo("DMA Channel %u Registers:\n", dmach->chno);
  dmainfo("     CFG:  %04x\n", regs->cfg);
  dmainfo("    STAT:  %04x\n", regs->stat);
  dmainfo("     SRC:  %04x\n", regs->src);
  dmainfo("     DST:  %04x\n", regs->dst);
  dmainfo("     CNT:  %04x\n", regs->cnt);
  dmainfo("  SRCRLD:  %04x\n", regs->srcrld);
  dmainfo("  DSTRLD:  %04x\n", regs->dstrld);
  dmainfo("  CNTRLD:  %04x\n", regs->cntrld);
}
